--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "id-validator": "^1.3.0",
     "lodash": "^4.17.4",
     "url-search-params": "^0.10.0",
     "vue": "^2.3.3",
