--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url-search-params": "^0.10.0",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vue-awesome-swiper": "^2.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
