--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lodash": "^4.17.4",
     "url-search-params": "^0.10.0",
     "vue": "^2.3.3",
+    "vue-awesome-swiper": "^2.6.2",
     "vue-router": "^2.6.0",
-    "vuex": "^2.3.1",
-    "vue-awesome-swiper": "^2.6.2"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
