--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "crypto-js": "^3.1.9-1",
     "id-validator": "^1.3.0",
     "lodash": "^4.17.4",
     "url-search-params": "^0.10.0",
@@ -72,7 +73,7 @@
     "npm": ">= 3.0.0"
   },
   "browserslist": [
-    "iOS >= 7", 
+    "iOS >= 7",
     "Android >= 4.1"
   ]
 }
